fix conflicts with warbleR updates and bugs in SNR and EA

--- a/vignettes/baRulho_quantifying_sound_degradation.Rmd
+++ b/vignettes/baRulho_quantifying_sound_degradation.Rmd
@@ -1323,7 +1323,7 @@ Finally, the function `spcc()` measures spectrogram cross-correlation as a metri
 ```{r, eval = TRUE}
 
 # run spcc
-spd <- spcc(X = playback_est, method = 1, pb = FALSE)
+spd <- spcc(X = playback_est, method = 1, pb = FALSE, wl = 512)
 
 # check output class
 is_extended_selection_table(spd)
